Changer le nom de l'organisation

--- a/app/views/home/coor.haml
+++ b/app/views/home/coor.haml
@@ -8,15 +8,15 @@
 
     .alert.alert-warning Ce qui suit est une proposition à discuter dans vos ACRQ
 
-    %p 
-      Le comité organisateur (COOR) serait formé du Conseil des Opérations (C.O.) et de deux membres des différents comités à former qui auront à servir l’ensemble des Assemblées constituantes régionales québécoises (ACRQ).  Les dix-sept « Responsables des Services de Région (RSR) » complèteraient la formation du COOR et il se réunirait à tous les mois à compter de janvier 2016. 
+    %p
+      Le comité organisateur (COOR) serait formé du Conseil des Opérations (C.O.) et de deux membres des différents comités à former qui auront à servir l’ensemble des Assemblées constituantes régionales québécoises (ACRQ).  Les dix-sept « Responsables des Services de Région (RSR) » complèteraient la formation du COOR et il se réunirait à tous les mois à compter de janvier 2016.
 
     %p
-      Le rôle du COOR est de tout mettre en œuvre pour offrir toutes les ressources possibles aux différentes composantes de l’Assemblée constituante citoyenne du Québec (ACCQ) pour assurer l’harmonisation de notre démarche et l’atteinte de nos objectifs. 
+      Le rôle du COOR est de tout mettre en œuvre pour offrir toutes les ressources possibles aux différentes composantes de l’Alliance pour une constituante citoyenne du Québec (ACCQ) pour assurer l’harmonisation de notre démarche et l’atteinte de nos objectifs.
 
     %h3.sub-section Le conseil des opérations (C.O.)
     %p
-      Le Conseil des Opérations (C.O.) se veut le cœur du noyau central (COOR) de l’Assemblée constituante citoyenne du Québec. Toutes ses décisions sont prises en collégialité. C’est lui qui voit à l’harmonisation de toute la structure horizontale de notre démarche. Son mandat est d’assurer l’unité de toutes les entités actuellement formées et à venir. Ses membres doivent être choisis avec beaucoup de précaution et de vigilance puisque c’est l’épine dorsale de notre démarche. L’engagement des membres qui en feront partie doit être basé sur une intégrité à toute épreuve pour ne servir aucun autre intérêt que celui du peuple.    
+      Le Conseil des Opérations (C.O.) se veut le cœur du noyau central (COOR) de l’Alliance pour une constituante citoyenne du Québec. Toutes ses décisions sont prises en collégialité. C’est lui qui voit à l’harmonisation de toute la structure horizontale de notre démarche. Son mandat est d’assurer l’unité de toutes les entités actuellement formées et à venir. Ses membres doivent être choisis avec beaucoup de précaution et de vigilance puisque c’est l’épine dorsale de notre démarche. L’engagement des membres qui en feront partie doit être basé sur une intégrité à toute épreuve pour ne servir aucun autre intérêt que celui du peuple.
 
     %p
       Le C.O. est l'instance qui établit le lien entre les régions et assure la transmission et la libre circulation des informations. Il s’assure que toutes les décisions entérinées par la majorité absolue des membres d’une ACRQ soient acheminées dans les autres régions pour qu’elles les entérinent à leur tour. Le Conseil des opérations supervise le travail des comités et assure leurs bons fonctionnements. Il a la responsabilité d’établir les grandes lignes d’orientations avec les responsables de services des ACRQ. Il a les pouvoirs de prendre les décisions nécessaires pour assurer le bon fonctionnement des groupes et des événements promotionnels. <b>Il n’a cependant aucun pouvoir exécutif sur les orientations sans d’abord avoir reçu l’assentiment d’un maximum d’ACRQ.</b>
@@ -27,37 +27,37 @@
       %li Il proposera lors des Tables nationales* les programmes trimestriels, les principales activités; propose les priorités et les orientations.
       %li Il peut proposer la création de comités de travail parallèles (comités spéciaux)
       %li Il structure et propose le plan d'action en vue de réaliser nos énoncés de mission.
-      %li Il administre et assure en compagnie du Comité financement la bonne gestion des argents perçus.    
+      %li Il administre et assure en compagnie du Comité financement la bonne gestion des argents perçus.
 
-    %p 
-      %i * Ces Tables nationales se tiendraient mensuellement suite aux réunions régionales à compter de janvier 2016. Ces réunions auraient lieu à tour de rôle dans chacune des dix-sept ACRQ du Québec et seraient bien sûr ouvertes à tous. Ceci permettrait de mieux promouvoir notre démarche.      
+    %p
+      %i * Ces Tables nationales se tiendraient mensuellement suite aux réunions régionales à compter de janvier 2016. Ces réunions auraient lieu à tour de rôle dans chacune des dix-sept ACRQ du Québec et seraient bien sûr ouvertes à tous. Ceci permettrait de mieux promouvoir notre démarche.
 
     %h3.sub-section Nos comités nationaux
     %ol{type: "A"}
-      %li 
+      %li
         %strong Mobilisation et recrutement
         %ul
           %li Répertorie les événements où nous pourrions informer les gens et les rallier à notre démarche
-          %li Bâtit des ponts avec la société civile 
-          %li Répertorie des outils de promotion 
+          %li Bâtit des ponts avec la société civile
+          %li Répertorie des outils de promotion
           %li Vulgarise le message en collaboration avec les comités communication et éducation
           %li Répertorie des associations qui pourraient collaborer avec l'ACCQ
-          %li Distribue les outils de aux Constituant.e.s dans les ACRQ 
+          %li Distribue les outils de aux Constituant.e.s dans les ACRQ
           %li Etc.
-      %li 
+      %li
         %strong Financement et trésorerie
         %ul
           %li Il est mandaté pour faire les démarches relatives à notre structure corporative (OSBL)
-          %li S’occupe des finances de l’Assemblée constituante citoyenne du Québec avec l’OSBL 
+          %li S’occupe des finances de l’Alliance pour une constituante citoyenne du Québec avec l’OSBL
           %li S’occupe de rechercher des moyens de financement
           %li S’occupe du financement des événements
-          %li S’occupe de faire le suivi pour la production des outils promotionnels (macarons, t-shirt, tract, savon et autres… 
+          %li S’occupe de faire le suivi pour la production des outils promotionnels (macarons, t-shirt, tract, savon et autres…
           %li Répertorie des programmes (subventions)
           %li Assure la saine gestion de l’ACCQ (vérification comptable)
           %li Organise de campagnes de souscription (financement participatif)
           %li Évalue la campagne possible de financement « picbadge »
           %li Etc.
-      %li 
+      %li
         %strong Communication
         %p
           %i
@@ -65,7 +65,7 @@
         %ul
           %li Préparer le matériel nécessaire pour les rencontres informatives (power point et vidéos)
           %li Produire les pochettes publicitaires
-          %li Produire les documents officiels de l'Assemblée constituante citoyenne du Québec
+          %li Produire les documents officiels de l'Alliance pour une constituante citoyenne du Québec
           %li Établir les listes de diffusion
           %li Établir les contacts  avec les médias journaux, télé, radios
           %li Production de communiqués de presse
@@ -77,28 +77,28 @@
           %li Prépare et organise les ateliers constituants dans les régions
           %li S’occupe de la gestion des comptes rendus de ces ateliers constituants
           %li S’occupe de la gestion de la section « Éducation » de notre site WEB
-          %li Répertorie des exemples de constitutions dans le monde et au Québec 
+          %li Répertorie des exemples de constitutions dans le monde et au Québec
           %li Etc.
-      %li 
+      %li
         %strong Web
         %ul
-          %li Veille à la gestion de notre site Web et aux mises à jour. 
+          %li Veille à la gestion de notre site Web et aux mises à jour.
           %li Crée les pages de réseaux sociaux et assure l’uniformité des informations
           %li Crée les pages événements pour nos activités
           %li Veille au contenu de nos pages Facebook et agit comme modérateur lorsque nécessaire
           %li Etc.
       %li
-        %strong Comité secrétariat et registrariat 
+        %strong Comité secrétariat et registrariat
         %ul
-          %li Assure que tous les documents officiels produits par l’Assemblée constituante citoyenne du Québec sont rédigés dans un français impeccable.   
+          %li Assure que tous les documents officiels produits par l’Alliance pour une constituante citoyenne du Québec sont rédigés dans un français impeccable.
           %li Vérifie et révise tous les documents
           %li Voit à la mise à jour de tous les Contituant.e.s au Québec et assure la confidentialité des données personnelles.
           %li Retransmet aux Responsables Régionaux la liste de leurs constituant.e.s.
           %li Répertorie tous les procès-verbaux des ACRQ et autres document de l’ACCQ.
           %li Etc.
-      %li 
-        %strong Résolution de problèmes      
+      %li
+        %strong Résolution de problèmes
 
 
     %h3.sub-section Les 17 Responsables des services de régions (RSR)
-    %p Les Responsables des services de région sont intégrés au COOR pour favoriser l’harmonisation de toute notre structure organisationnelle horizontale.   
+    %p Les Responsables des services de région sont intégrés au COOR pour favoriser l’harmonisation de toute notre structure organisationnelle horizontale.
