--- a/app/views/home/deuxieme_rencontre_nationale.haml
+++ b/app/views/home/deuxieme_rencontre_nationale.haml
@@ -1,15 +1,15 @@
 -content_for :page_title do
   Deuxième rencontre nationale - 31 octobre et 1er novembre à Lévis
 
-.row  
+.row
   .col-xs-12
     %p.hidden-xs.hidden-sm
-      =image_tag "https://scontent-lga3-1.xx.fbcdn.net/hphotos-xap1/t31.0-8/12138472_1268636136495934_6755082089540774926_o.jpg", class: "img-responsive thumbnail"      
+      =image_tag "https://scontent-lga3-1.xx.fbcdn.net/hphotos-xap1/t31.0-8/12138472_1268636136495934_6755082089540774926_o.jpg", class: "img-responsive thumbnail"
     %p.lead
       Ami.e.s Constituant.e.s,
 
     %p
-      Notre première rencontre nationale à Drummondville a connu un succès tel que c’est avec enthousiasme que nous vous annonçons la tenue d’une deuxième rencontre nationale de l'Assemblée constituante citoyenne du Québec.
+      Notre première rencontre nationale à Drummondville a connu un succès tel que c’est avec enthousiasme que nous vous annonçons la tenue d’une deuxième rencontre nationale de l'Alliance pour une constituante citoyenne du Québec.
 
     %p
       Cette rencontre se tiendra les 31 octobre et 1er novembre dans la magnifique région de Chaudière-Appalaches. C’est donc à Lévis, dans la continuité de ce que nous avons réalisé ENSEMBLE à Drummondville, que nous nous engagerons à entériner les propositions émanant des régions (ACRQ) pour asseoir notre structure organisationnelle et le contenu de nos textes de base (Manifeste et Énoncés de mission).
@@ -21,11 +21,11 @@
     %p
       À la suite de cette deuxième rencontre nationale, bien que nos textes de base seront officiels, il sera toujours possible, à partir d'un consentement quasi unanime des constituant.e.s d'une région (ACRQ), de les améliorer. Nous aurons donc aussi à définir ensemble un statut ou un règlement à cet effet.
 
-    %p Par ailleurs, cette deuxième rencontre nous permettra de nous entendre sur les postes de responsabilités à combler dans les régions, dans les comités et au C.O. ainsi que sur les tâches s'y attachant. Vos ACRQ recevront bientôt des propositions à cet effet sur votre page FB régionale. 
+    %p Par ailleurs, cette deuxième rencontre nous permettra de nous entendre sur les postes de responsabilités à combler dans les régions, dans les comités et au C.O. ainsi que sur les tâches s'y attachant. Vos ACRQ recevront bientôt des propositions à cet effet sur votre page FB régionale.
 
     %p Les constituant.e.s présents recevront également, à Lévis, la proposition du C.O.I. quant au mandat qui lui a été donné concernant la structure corporative.
 
-    %p Finalement, nous aurons à nous entendre sur le mode sélection qui sera retenu pour choisir le tout premier C.O. de l'Assemblée constituante citoyenne du Québec ainsi que sur la durée de son mandat.
+    %p Finalement, nous aurons à nous entendre sur le mode sélection qui sera retenu pour choisir le tout premier C.O. de l'Alliance pour une constituante citoyenne du Québec ainsi que sur la durée de son mandat.
 
     %p Pour faire de cette deuxième rencontre nationale, un événement marquant vers la réalisation de nos objectifs, nous comptons sur votre implication et sur votre présence !
 
