--- a/app/views/home/moyen.haml
+++ b/app/views/home/moyen.haml
@@ -5,19 +5,19 @@
 
 
 .row
-  .col-md-12    
+  .col-md-12
     =render "mission_nav", active: :moyen
-    %h2.sub-section L'Assemblée constituante citoyenne du Québec s’engage à l'instauration d'une véritable démocratie par un processus constituant libre dans ses délibérations. Vous engagez-vous avec NOUS?
+    %h2.sub-section L'Alliance pour une constituante citoyenne du Québec s’engage à l'instauration d'une véritable démocratie par un processus constituant libre dans ses délibérations. Vous engagez-vous avec NOUS?
 
     %h3 NOS OBJECTIFS
-    %h4 Objectif 1: Promouvoir l’importance d’une démarche constituante afin que notre constitution soit rédigée par et pour le peuple. 
+    %h4 Objectif 1: Promouvoir l’importance d’une démarche constituante afin que notre constitution soit rédigée par et pour le peuple.
 
-    %p 
+    %p
       %strong Moyens:
       %ul
         %li Faire connaître le projet politique d'une assemblée constituante non partisane, libre dans ses délibérations, à la population du Québec.
-        %li Informer le peuple québécois pour qu’il devienne un peuple constituant en lui offrant des outils d’éducation populaire par l'entremise de notre site internet, nos séminaires en ligne et nos rencontres informatives. 
-        %li Bâtir des ponts avec la société civile.   
+        %li Informer le peuple québécois pour qu’il devienne un peuple constituant en lui offrant des outils d’éducation populaire par l'entremise de notre site internet, nos séminaires en ligne et nos rencontres informatives.
+        %li Bâtir des ponts avec la société civile.
         %li Établir des ateliers constituants qui porteront sur les divers chapitres d'une constitution : <i>choix de société, statut des personnes vulnérables, langue officielle, laïcité, droits, libertés et responsabilités, services publics, éducation, ressources naturelles et environnement, sécurité, politiques économiques, fiscales et monétaires, type de gouvernement, mécanismes de participation des citoyens et des citoyennes, et des régions, gouvernements territoriaux, etc.</i>
 
     
@@ -25,11 +25,11 @@
 
     %h4 Objectif  2 : Rassembler la population québécoise autour d'un projet commun tangible puisqu’elle a l’intelligence, la capacité et la détermination :
     
-    %ol{type: "a"} 
+    %ol{type: "a"}
       %li de définir les règles d’une future Assemblée constituante (mandat, format, critères d'éligibilité, lignes de conduite, statuts et règlements, tirage au sort, etc.);
       %li d’écrire par elle-même sa propre constitution
 
-    %p 
+    %p
       %strong Moyens :
       %ul
         %li
@@ -41,20 +41,20 @@
 
         %li Regrouper les Québécois et les Québécoises pour qu’ils s’exercent, lors d’ateliers constituants, à rédiger une Loi fondamentale et participent aussi à définir le mode de fonctionnement d’une assemblée constituante simulée.
 
-        %li Inviter tous les Constituant.e.s  à participer à la rédaction d'une constitution préparatoire, une fois que nous aurons ensemble défini, son mode de fonctionnement. L’Assemblée constituante citoyenne du Québec orchestrera alors une Constituante simulée. Tous les débats de l’Assemblée constituante citoyenne du Québec seront accessibles sur internet. 
+        %li Inviter tous les Constituant.e.s  à participer à la rédaction d'une constitution préparatoire, une fois que nous aurons ensemble défini, son mode de fonctionnement. L’Alliance pour une constituante citoyenne du Québec orchestrera alors une Constituante simulée. Tous les débats de l’Alliance pour une constituante citoyenne du Québec seront accessibles sur internet.
 
         %li Diffuser le résultat de l’expérience constituante à toute la population du Québec.
 
-    %h4 Objectif 3 : D’ici la prochaine élection générale au Québec, faire pression sur les partis et sur l’Assemblée nationale pour nous assurer que soit convoquée, rapidement après l’élection, une Assemblée constituante, totalement libre dans ses délibérations. 
+    %h4 Objectif 3 : D’ici la prochaine élection générale au Québec, faire pression sur les partis et sur l’Assemblée nationale pour nous assurer que soit convoquée, rapidement après l’élection, une Assemblée constituante, totalement libre dans ses délibérations.
     
     %p
       %strong Moyens :
-      %ul 
+      %ul
         %li Mobiliser un minimum de 100 000 personnes comprenant bien le sens d'une démarche constituante non partisane.
 
         %li Faire les pressions nécessaires sur ceux et celles qui souhaitent nous représenter pour qu'ils ou qu’elles s'engagent, au-delà de toute ligne de parti, à convoquer, sans délai, une assemblée constituante non partisane, libre dans ses délibérations. Suite au prochain rendez-vous électoral québécois, cette Assemblée constituante sera mandatée pour rédiger et faire adopter notre toute première constitution démocratique du Québec qui sera ensuite entérinée par l’ensemble de la population du Québec.
 
-    %blockquote 
+    %blockquote
       %h2 Un monde libre et responsable déploie ses ailes. ENSEMBLE, prenons notre envol!
 
     %p= link_to "Pour rejoindre votre Assemblée constituante régionale québécoise (ACRQ)…", hives_path
