--- a/app/views/home/objectifs.haml
+++ b/app/views/home/objectifs.haml
@@ -4,16 +4,16 @@
 -breadcrumb :objectifs
 
 .row
-  .col-md-12    
+  .col-md-12
     =render "mission_nav", active: :objectifs
     
-    %h2.sub-section LE PREMIER OBJECTIF de l'Assemblée constituante citoyenne du Québec vise à mobiliser un minimum de 100 000 personnes comprenant bien le sens d'une démarche constituante non partisane. 
+    %h2.sub-section LE PREMIER OBJECTIF de l'Alliance pour une constituante citoyenne du Québec vise à mobiliser un minimum de 100 000 personnes comprenant bien le sens d'une démarche constituante non partisane.
 
-    %p <strong>NOUS,</strong> Constituants, Constituantes, exercerons les pressions nécessaires auprès de toutes les personnes concernées d’ici le prochain rendez-vous électoral québécois afin que les candidat(e)s s'engagent solennellement, au-delà de toute ligne de parti,  à convoquer, sans délai, une Assemblée constituante indépendante de l'État et à lui fournir les moyens requis pour un fonctionnement efficace. 
+    %p <strong>NOUS,</strong> Constituants, Constituantes, exercerons les pressions nécessaires auprès de toutes les personnes concernées d’ici le prochain rendez-vous électoral québécois afin que les candidat(e)s s'engagent solennellement, au-delà de toute ligne de parti,  à convoquer, sans délai, une Assemblée constituante indépendante de l'État et à lui fournir les moyens requis pour un fonctionnement efficace.
 
     %h3 Comment le réaliserons-nous ?
 
-    %p <strong>Ensemble,</strong> nous ferons connaître le projet politique d'une Assemblée constituante non partisane, «idéalement convoquée par l'Assemblée nationale», qui permettra à toute la population de redéfinir elle-même ses institutions démocratiques, ses règles du pouvoir et les grandes lignes d'un nouveau projet de société plus conforme à ses aspirations.                                           
+    %p <strong>Ensemble,</strong> nous ferons connaître le projet politique d'une Assemblée constituante non partisane, «idéalement convoquée par l'Assemblée nationale», qui permettra à toute la population de redéfinir elle-même ses institutions démocratiques, ses règles du pouvoir et les grandes lignes d'un nouveau projet de société plus conforme à ses aspirations.
 
     %p <strong>Ensemble,</strong> nous démontrerons l'utilité et la faisabilité de notre démarche.
 
@@ -21,38 +21,38 @@
 
 
     %h2.sub-section
-      NOTRE DEUXIÈME OBJECTIF est de convoquer une Assemblée constituante citoyenne dès qu’il nous sera possible de le faire. 
+      NOTRE DEUXIÈME OBJECTIF est de convoquer une Assemblée constituante citoyenne dès qu’il nous sera possible de le faire.
     
-    %p Tous les débats de l’ACCQ seront accessibles par web diffusion. 
+    %p Tous les débats de l’ACCQ seront accessibles par web diffusion.
 
-    %p Une fois notre structure organisationnelle bien établie, nous définirons ENSEMBLE, démocratiquement, le mode de fonctionnement (lignes de conduite, critères d’éligibilité, statuts et règlements, etc.) de l’Assemblée constituante citoyenne du Québec.
+    %p Une fois notre structure organisationnelle bien établie, nous définirons ENSEMBLE, démocratiquement, le mode de fonctionnement (lignes de conduite, critères d’éligibilité, statuts et règlements, etc.) de l’Alliance pour une constituante citoyenne du Québec.
 
 
     %h3 Comment le réaliserons-nous ?
  
-    %p <strong>Ensemble,</strong> nous établirons une structure organisationnelle décentralisée pour faciliter l’accessibilité des Constituants et des Constituantes afin de leur permettre de participer à toutes les décisions. Des outils modernes de démocratie directe seront aussi utilisés.   
+    %p <strong>Ensemble,</strong> nous établirons une structure organisationnelle décentralisée pour faciliter l’accessibilité des Constituants et des Constituantes afin de leur permettre de participer à toutes les décisions. Des outils modernes de démocratie directe seront aussi utilisés.
 
-    %p <strong>Ensemble,</strong> nous établirons un noyau central, composé de différents comités et d’un comité organisateur (COOR) au niveau national, qui permettra l'harmonisation de notre démarche.   
+    %p <strong>Ensemble,</strong> nous établirons un noyau central, composé de différents comités et d’un comité organisateur (COOR) au niveau national, qui permettra l'harmonisation de notre démarche.
 
-    %p <strong>Ensemble,</strong> nous  organiserons des ateliers constituants aux niveaux national, régional et local à l'aide d'outils d'éducation permettant à tous de se familiariser avec notre démarche constituante et avec son mode de fonctionnement démocratiquement défini.                 
+    %p <strong>Ensemble,</strong> nous  organiserons des ateliers constituants aux niveaux national, régional et local à l'aide d'outils d'éducation permettant à tous de se familiariser avec notre démarche constituante et avec son mode de fonctionnement démocratiquement défini.
 
-    %p <strong>Ensemble,</strong> nous définirons les détails de ce mode de fonctionnement (format, critères d'éligibilité, lignes de conduite, statuts et règlements, tirage au sort, etc.).                                                                                            
+    %p <strong>Ensemble,</strong> nous définirons les détails de ce mode de fonctionnement (format, critères d'éligibilité, lignes de conduite, statuts et règlements, tirage au sort, etc.).
 
     %p <strong>Ensemble,</strong> nous participerons à la rédaction d’une toute première constitution provisoire vraiment démocratique.
 
-    %p En fonction du mode de fonctionnement défini, une fois que les hommes et les femmes qui y siègeront auront été choisis, nous participerons ensemble à cet exercice fort révélateur de ce que devrait être notre première Loi fondamentale québécoise. Tous les membres constituants rassemblés à ce moment-là avec nous, pourront participer activement à son élaboration. Imaginez la fierté que nous en retirerons… 
+    %p En fonction du mode de fonctionnement défini, une fois que les hommes et les femmes qui y siègeront auront été choisis, nous participerons ensemble à cet exercice fort révélateur de ce que devrait être notre première Loi fondamentale québécoise. Tous les membres constituants rassemblés à ce moment-là avec nous, pourront participer activement à son élaboration. Imaginez la fierté que nous en retirerons…
 
 
     %h2.sub-section Joignez-vous à nous !
 
 
-    %p Plus nous serons nombreux à endosser les pouvoirs constituants que nous sommes en droit de nous accorder, moins la légitimité de notre démarche sera contestable.                                                                              
-    %p Plus nous serons nombreux à élaborer notre constitution provisoire et plus elle sera représentative de la volonté populaire du Québec. 
+    %p Plus nous serons nombreux à endosser les pouvoirs constituants que nous sommes en droit de nous accorder, moins la légitimité de notre démarche sera contestable.
+    %p Plus nous serons nombreux à élaborer notre constitution provisoire et plus elle sera représentative de la volonté populaire du Québec.
 
     %p Une fois rédigée, cette constitution «préparatoire» sera alors l’assise d’une nouvelle démarche légitimée par l’Assemblée nationale visant à mobiliser toute la population du Québec.
 
-    %p Si vous êtes de ceux et celles qui veulent revoir avec nous la façon dont nous sommes gouvernés et qui aimeraient participer à la création d’un projet de société plus conforme à leurs aspirations, n'hésitez pas à vous joindre à nous <strong>maintenant</strong>. 
+    %p Si vous êtes de ceux et celles qui veulent revoir avec nous la façon dont nous sommes gouvernés et qui aimeraient participer à la création d’un projet de société plus conforme à leurs aspirations, n'hésitez pas à vous joindre à nous <strong>maintenant</strong>.
 
-    %p Vous trouverez, dans votre regroupement régional, le réseau et les moyens nécessaires pour favoriser l'instauration d'une véritable démocratie. 
+    %p Vous trouverez, dans votre regroupement régional, le réseau et les moyens nécessaires pour favoriser l'instauration d'une véritable démocratie.
 
     %p.lead Rejoignez votre Assemblée constituante régionale québécoise (ACRQ).
