--- a/app/views/structure/structure_nationale/_comites_nationaux.haml
+++ b/app/views/structure/structure_nationale/_comites_nationaux.haml
@@ -8,12 +8,12 @@
   %h4.sub-section Mobilisation
   %ul
     %li Répertorie les événements où nous pourrions informer les gens et les rallier à notre démarche;
-    %li Bâtit des ponts avec la société civile (organismes communautaires, regroupements de citoyens, syndicats, etc.; 
-    %li Répertorie et développe des outils de promotion; 
+    %li Bâtit des ponts avec la société civile (organismes communautaires, regroupements de citoyens, syndicats, etc.;
+    %li Répertorie et développe des outils de promotion;
     %li Vulgarise le message en collaboration avec les comités communications et éducation;
     %li Répertorie des associations qui pourraient collaborer avec l'ACCQ;
-    %li Distribue les outils de promotion aux constituant.e.s dans les ACRQ; 
-    %li Accomplit toute autre tâche jugée pertinente.  
+    %li Distribue les outils de promotion aux constituant.e.s dans les ACRQ;
+    %li Accomplit toute autre tâche jugée pertinente.
 
   %p
     %strong Pour vous joindre à ce comité: #{mail_to "mobilisation@constituantecitoyenne.quebec"}
@@ -21,15 +21,15 @@
   %h4.sub-section Financement et trésorie
   %ul
     %li Fait les démarches relatives à notre structure corporative (OSBL);
-    %li Gère le budget de l’Assemblée constituante citoyenne du Québec avec l’OSBL;
+    %li Gère le budget de l’Alliance pour une constituante citoyenne du Québec avec l’OSBL;
     %li Recherche du financement;
     %li S’occupe du financement des événements;
-    %li Fait le suivi pour la production des outils promotionnels (macarons, t-shirts, tracts, savons, etc.); 
+    %li Fait le suivi pour la production des outils promotionnels (macarons, t-shirts, tracts, savons, etc.);
     %li Répertorie des programmes (subventions) de financement;
     %li Assure la saine gestion de l’ACCQ (vérification comptable);
     %li Organise des campagnes de souscription (financement participatif);
     %li Évalue la possible campagne de financement « picbadge »;
-    %li Accomplit toute autre tâche jugée pertinente.  
+    %li Accomplit toute autre tâche jugée pertinente.
   %p
     %strong Pour vous joindre à ce comité: #{mail_to "financement@constituantecitoyenne.quebec"}
 
@@ -40,7 +40,7 @@
   %ul
     %li Prépare le matériel nécessaire pour les rencontres informatives (Powerpoint et vidéos);
     %li Produit les pochettes publicitaires;
-    %li Produit les documents officiels de l'Assemblée constituante citoyenne du Québec;
+    %li Produit les documents officiels de l'Alliance pour une constituante citoyenne du Québec;
     %li Établit les listes de diffusion;
     %li Établit les contacts  avec les médias (journaux, télés, radios);
     %li Produit les communiqués de presse;
@@ -57,8 +57,8 @@
     %li Prépare et organise les ateliers constituants dans les régions;
     %li Assure la gestion des comptes rendus de ces ateliers constituants;
     %li Assure la gestion de la section « Éducation » de notre site WEB;
-    %li Répertorie des exemples de constitutions dans le monde et au Québec; 
-    %li Accomplit toute autre tâche jugée pertinente.  
+    %li Répertorie des exemples de constitutions dans le monde et au Québec;
+    %li Accomplit toute autre tâche jugée pertinente.
   %p
     %strong Pour vous joindre à ce comité: #{mail_to "education@constituantecitoyenne.quebec"}
 
@@ -70,7 +70,7 @@
     %li Crée les pages de réseaux sociaux et assure l’uniformité des informations;
     %li Crée les pages événements pour nos activités;
     %li Veille au contenu de nos pages Facebook et agit comme modérateur lorsque nécessaire;
-    %li Accomplit toute autre tâche jugée pertinente.  
+    %li Accomplit toute autre tâche jugée pertinente.
 
   %p
     %strong Pour vous joindre à ce comité: #{mail_to "web@constituantecitoyenne.quebec"}
@@ -78,12 +78,12 @@
 %section#comite-secretariat
   %h4.sub-section Secrétariat et registrariat
   %ul
-    %li Assure que tous les documents officiels produits par l’Assemblée constituante citoyenne du Québec sont rédigés dans un français impeccable;   
+    %li Assure que tous les documents officiels produits par l’Alliance pour une constituante citoyenne du Québec sont rédigés dans un français impeccable;
     %li Vérifie et révise tous les documents;
     %li Voit à la mise à jour des données personnelles de tous les contituant.e.s au Québec et en assure la confidentialité;
     %li Transmet aux responsables régionaux la liste de leurs constituant.e.s;
     %li Répertorie tous les procès-verbaux des ACRQ et autres documents de l’ACCQ;
-    %li Accomplit toute autre tâche jugée pertinente.  
+    %li Accomplit toute autre tâche jugée pertinente.
 
   %p
     %strong Pour vous joindre à ce comité: #{mail_to "secretariat@constituantecitoyenne.quebec"}
@@ -93,13 +93,13 @@
 
   %h5 1. Définition du problème
   %p
-    Avant de tenter de régler un problème, il importe de bien le définir. Parfois, cette seule étape permet d'en arriver à modifier certaines perceptions et à régler une bonne part du problème qui nous préoccupe. Trouver des solutions à une difficulté qui demeure vague et confuse ou à plusieurs problèmes à la fois peut sembler décourageant. Assurez-vous de séparer les problèmes s'il y en a plusieurs. Afin de préciser la nature de la difficulté, posez-vous les questions suivantes : 
+    Avant de tenter de régler un problème, il importe de bien le définir. Parfois, cette seule étape permet d'en arriver à modifier certaines perceptions et à régler une bonne part du problème qui nous préoccupe. Trouver des solutions à une difficulté qui demeure vague et confuse ou à plusieurs problèmes à la fois peut sembler décourageant. Assurez-vous de séparer les problèmes s'il y en a plusieurs. Afin de préciser la nature de la difficulté, posez-vous les questions suivantes :
 
   %ul
-    %li Qu'est-ce qui vous dérange? 
-    %li Quelle est la situation que vous voulez faire cesser? 
-    %li Dans quel contexte ce problème apparaît-il? (quand? où? comment? avec qui?) 
-    %li Que ressentez-vous? 
+    %li Qu'est-ce qui vous dérange?
+    %li Quelle est la situation que vous voulez faire cesser?
+    %li Dans quel contexte ce problème apparaît-il? (quand? où? comment? avec qui?)
+    %li Que ressentez-vous?
     %li Est-ce bien votre problème ? Questionnez-vous aussi sur le but que vous souhaitez atteindre au terme de ce processus. Quelle sera la situation, une fois ce problème résolu?
 
 %h5 2. Générez des solutions
@@ -107,8 +107,8 @@
   Cette étape consiste à dresser un inventaire, le plus large possible, des solutions au problème que vous avez identifié, sans en juger pour l'instant la valeur ou le réalisme. Souvent, la solution se trouve dans une action que vous n'avez peut-être pas envisagée. Un autre risque est de porter un jugement trop rapide sur les idées qui vous viennent en tête et de rejeter des solutions originales, pouvant être constructives.
 
 %h5 3. Choisissez une solution
-%p 
-  Après avoir formulé toutes vos idées, il est temps de passer à la prise de décision. Souvent, la solution réside dans une combinaison de plusieurs éléments de solution. Pesez le pour et le contre des options et la faisabilité de celles-ci. Procédez par élimination. 
+%p
+  Après avoir formulé toutes vos idées, il est temps de passer à la prise de décision. Souvent, la solution réside dans une combinaison de plusieurs éléments de solution. Pesez le pour et le contre des options et la faisabilité de celles-ci. Procédez par élimination.
 
 %p
   Le processus de résolution de problèmes peut parfois être stoppé à cette étape : plutôt que de courir le risque de vous tromper, il peut être tentant de préférer ne rien choisir. Assurez-vous également de pouvoir mettre vous-même en œuvre la solution choisie et de ne pas compter uniquement sur les autres.
@@ -117,7 +117,7 @@
 %h5 4. Appliquez la solution choisie
 
 %p
-  Décidez des étapes à accomplir afin d'appliquer votre solution et... passez à l'action! Il n'est pas nécessaire d'être certain, certaine qu'il s'agit de LA bonne solution avant de l'essayer. Les meilleures solutions du monde ne régleront rien si vous ne les appliquez pas! 
+  Décidez des étapes à accomplir afin d'appliquer votre solution et... passez à l'action! Il n'est pas nécessaire d'être certain, certaine qu'il s'agit de LA bonne solution avant de l'essayer. Les meilleures solutions du monde ne régleront rien si vous ne les appliquez pas!
 %p
   Certains comportements ou certaines craintes (ex. : remise à plus tard, peur du jugement ou des critiques) peuvent vous faire hésiter à mettre en application la solution choisie. Il est important d'en prendre conscience. Prendre une décision entraîne certaines conséquences, mais il est souvent possible de les évaluer en bonne partie. Surtout, n'oubliez pas que passer à l'action amène souvent un sentiment de satisfaction et augmente votre confiance en vous.
 
