--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -17,7 +17,7 @@
     = csrf_meta_tags
     %link{:href => image_path('favicon.ico'), :rel => "icon", :type => "image/vnd.microsoft.icon"}/
     %link{:href => 'http://fonts.googleapis.com/css?family=PT+Sans', :rel => 'stylesheet', :type => 'text/css'}/
-  %body  
+  %body
     :plain
       <div id="fb-root"></div>
       <script>(function(d, s, id) {
@@ -26,7 +26,7 @@
         js = d.createElement(s); js.id = id;
         js.src = "//connect.facebook.net/fr_CA/sdk.js#xfbml=1&version=v2.4&appId=506676169370064";
         fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>    
+      }(document, 'script', 'facebook-jssdk'));</script>
     .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
@@ -36,15 +36,15 @@
             %span.icon-bar
             %span.icon-bar
 
-          =link_to image_tag("logo_trans.png", height: 50), admin_root_path, class: "navbar-brand logo"          
+          =link_to image_tag("logo_trans.png", height: 50), admin_root_path, class: "navbar-brand logo"
 
         .collapse.navbar-collapse
-          %ul.nav.navbar-nav            
+          %ul.nav.navbar-nav
             %li= link_to "Accueil", admin_root_path
             %li= link_to "Gérer les ACRQ", admin_hives_path, id: "manage-hives"
-            %li= link_to "Signataires", admin_members_path, id: "manage-members"            
+            %li= link_to "Signataires", admin_members_path, id: "manage-members"
             %li= link_to "Voir le site", root_path, target: "_blank"
-            %li=link_to("<i class='fa fa-power-off'></i> Se déconnecter".html_safe, destroy_user_session_path, :method => :delete, id: "sign-out") 
+            %li=link_to("<i class='fa fa-power-off'></i> Se déconnecter".html_safe, destroy_user_session_path, :method => :delete, id: "sign-out")
     .container
       - flash.each do |name, msg|
         %br/
@@ -57,17 +57,17 @@
 
 
       -if content_for?(:page_title)
-        .page-header      
-          %h1 
+        .page-header
+          %h1
             =yield(:page_title)
        
       = yield
 
     %footer
-      .container        
+      .container
         %p.text-muted
-          Assemblée constituante citoyenne du Québec (ACCQ) @#{Date.today.year}
+          Alliance pour une constituante citoyenne du Québec (ACCQ) @#{Date.today.year}
           -if false
-            \-          
+            \-
             %i.fa.fa-bitbucket-square
-            Code source sur #{link_to "bitbucket", "https://www.bitbucket.org/flamontagne/accq", target: "_blank"}          
+            Code source sur #{link_to "bitbucket", "https://www.bitbucket.org/flamontagne/accq", target: "_blank"}
