--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,10 +2,10 @@
 %html
   %head
     %meta{:charset => "utf-8"}
-    %title #{content_for?(:page_title) ? yield(:page_title) + " - L'Assemblée constituante citoyenne du Québec" : "L'Assemblée constituante citoyenne du Québec"}
+    %title #{content_for?(:page_title) ? yield(:page_title) + " - L'Alliance pour une constituante citoyenne du Québec" : "L'Alliance pour une constituante citoyenne du Québec"}
     %meta{:content => "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no", :name => "viewport"}
     %meta{:name => "viewport", :content => "initial-scale=1.0, user-scalable=no"}
-    %meta{:content => "Assemblée constituante citoyenne du Québec. Ensemble, constituons le Québec.", :name => "description"}
+    %meta{:content => "Alliance pour une constituante citoyenne du Québec. Ensemble, constituons le Québec.", :name => "description"}
     / Le HTML5 shim, for IE6-8 support of HTML5 elements
     /[if lt IE 9]
       = javascript_include_tag "https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js", "https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"
@@ -15,7 +15,7 @@
     = csrf_meta_tags
     %link{:href => image_path('favicon.ico'), :rel => "icon", :type => "image/vnd.microsoft.icon"}/
     %link{:href => 'http://fonts.googleapis.com/css?family=PT+Sans', :rel => 'stylesheet', :type => 'text/css'}/
-  %body  
+  %body
     :plain
       <div id="fb-root"></div>
       <script>(function(d, s, id) {
@@ -24,7 +24,7 @@
         js = d.createElement(s); js.id = id;
         js.src = "//connect.facebook.net/fr_CA/sdk.js#xfbml=1&version=v2.4&appId=506676169370064";
         fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>    
+      }(document, 'script', 'facebook-jssdk'));</script>
     .navbar.navbar-inverse.navbar-fixed-top
       .container
         .navbar-header
@@ -34,10 +34,10 @@
             %span.icon-bar
             %span.icon-bar
 
-          =link_to image_tag("logo_trans.png", height: 50), root_path, class: "navbar-brand logo"          
+          =link_to image_tag("logo_trans.png", height: 50), root_path, class: "navbar-brand logo"
 
         .collapse.navbar-collapse
-          %ul.nav.navbar-nav            
+          %ul.nav.navbar-nav
             %li= link_to "Accueil", root_path
             %li= link_to "Constat", constat_path
             %li= link_to "Manifeste", manifest_path
@@ -87,18 +87,18 @@
       %br/
       = breadcrumbs style: :bootstrap
       -if content_for?(:page_title)
-        .page-header      
-          %h1 
+        .page-header
+          %h1
             =yield(:page_title)
              
       = yield
 
     %footer
-      .container        
+      .container
         %p.text-muted
           =image_tag("logo_trans.png", height: 30)
-          Assemblée constituante citoyenne du Québec @#{Date.today.year}
-          \-                    
+          Alliance pour une constituante citoyenne du Québec @#{Date.today.year}
+          \-
           #{link_to "À propos du site web", a_propos_path}
       -if Rails.env.production?
         %script  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');  ga('create', 'UA-74182715-1', 'auto');  ga('send', 'pageview');
